database/couchbase-ce-local/dnsutils.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dnsutils
#  namespace: default
spec:
  containers:
  - name: dnsutils
    image: registry.k8s.io/e2e-test-images/agnhost:2.39
    imagePullPolicy: IfNotPresent
    resources: {}
  restartPolicy: Always
