database/couchbase-ce-local/3-hsvc-cbdb.yaml
apiVersion: v1
kind: Service
metadata:
  name: cbdb-hsvc
spec:
  clusterIP: None
  selector:
    app: couchbase
  ports:
    - name: couchbase
      port: 8091
      targetPort: 8091
    # - name: couchbase-https
    #   port: 18091
    #   targetPort: 18091

# nslookup
